Improving the rule switch conversion.